# usb-relay-olh

./: .gitignore  AGENT.md  PROJECT_STATUS.md  README.md  USAGE.md  USB功能完成状态.md  build_with_version.bat  fix_main_activity.ps1
docs/: BUILD_ANDROID.md  PROTOCOL.md
docs/01-Project-Overview/: 01-项目概述.md
docs/02-Windows-Client/: 01-relay-client-验证报告.md  02-usbip-win2-介绍.md  03-电脑端验证指南.md
docs/03-Android-Server/: 01-Android-Usbipdcpp-介绍.md
docs/04-Protocol/: 01-USBIP-协议详解.md
docs/05-Integration/: 01-完整集成方案.md  02-动态设备发现测试指南.md  03-协议修复方案.md  04-完整修复代码.md
docs/06-Version-Manage/: 01-版本号管理指南.md  README.md
docs/07-USB-Import/: 01-实现计划.md
docs/08-Code-Review/: 01-第一轮审核.md  02-第二轮审核.md  03-第三轮审核.md  04-实现总结.md
docs/09-URB-Implementation/: 01-协议定义审核.md  02-Android端实现计划.md  03-实现总结.md  04-第二轮审核.md  05-第三轮最终审核.md  06-交付报告.md
docs/10-Phase2-Driver-Integration/: 01-实施方案.md  02-实施总结.md  03-最终实施方案.md  04-实施进度报告.md
relay-client/: start_gui.bat  win_gui.py
relay-client/common/: protocol.c  protocol.h  tcp_transport.c  tcp_transport.h  usbip_standard.h
relay-client/linux/: CMakeLists.txt  main.c
relay-client/windows/: CMakeLists.txt  main.c
relay-host/USBRelay/: settings.gradle.kts  update_version.ps1  version.properties
relay-host/USBRelay/app/: build.gradle.kts
relay-host/USBRelay/gradle/wrapper/: gradle-wrapper.properties
usbip-win2/: README.md
usbip-win2/drivers/libdrv/: libdrv.vcxproj
usbip-win2/userspace/usbip/: usbip.vcxproj
virtual-usb-test/: CMakeLists.txt
virtual-usb-test/src/: main.cpp
(+17 files in other folders)
